package model.data.additional;

import model.data.DatumQueryService;

public class CommonsMedia extends LiteralString {

    public CommonsMedia(String value, DatumQueryService queryService) {
        super(value, queryService);
    }
}
