package model.data.additional;

import model.data.DatumQueryService;

public class MusicalNotation extends LiteralString {

    public MusicalNotation(String value, DatumQueryService queryService) {
        super(value, queryService);
    }
}
